Fixed navigation alignment
I wasn’t sure how to fix that when I was building this website, but it turned out that the problem was with default values of ul. All I had to do is remove padding completely =)

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ li {
   padding-bottom: 60px;
 }
 
+ul {
+  padding-left: 0px;
+}
+
 /* Smooth Zoom Effect on Hover */
 .zoom-box {
   transition: transform 0.5s;
